Fixed the extra space bug
+The extra space comes from the about me section before the animation begins.

--- a/app/globals.css
+++ b/app/globals.css
@@ -132,7 +132,7 @@ body {
 
 /* Navbar Section */
 .navbar {
-  @apply flex items-center justify-between pt-2 pb-1 md:pt-[5px] md:pb-0 px-6 md:px-12 w-screen fixed top-0 !z-40 lg:max-w-screen-xl text-slate-500 overflow-hidden;
+  @apply flex items-center justify-between pt-2 pb-1 md:pt-[5px] md:pb-0 px-6 md:px-12 w-full fixed top-0 !z-40 lg:max-w-screen-xl text-slate-500 overflow-hidden;
 }
 
 .navbar__scrolled {
@@ -191,15 +191,15 @@ body {
 
 .navbar__mobile-open,
 .navbar__mobile-closed {
-  @apply flex flex-col items-center gap-8 bg-white min-w-full h-full fixed top-0 lg:hidden z-50 ease-in-out duration-500;
+  @apply overflow-hidden flex flex-col items-center gap-8 bg-white w-full h-full fixed lg:hidden z-50 ease-in-out duration-500;
 }
 
 .navbar__mobile-open {
-  @apply right-0;
+  @apply top-0 left-0;
 }
 
 .navbar__mobile-closed {
-  @apply right-[-100%];
+  @apply top-0 left-[-100%];
 }
 
 .navbar__mobile-top {
